--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "mainmenu",
         "Thsi",
         "wonderfull"
-    ]
+    ],
+    "files.associations": {
+        "votecalculate": "c"
+    }
 }
